--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5895408528:AAEFdNE8jB0xt5BYTH1I0eO3a4Ymceak5BY"
+BOT_TOKEN = "5843309349:AAFaJmQpJc9ZvL4TQmKYf8w2Hb8wbjojU70"
 GDRIVE_FOLDER_ID = ""
 OWNER_ID = 6263157611
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -9,7 +9,7 @@ TELEGRAM_API = 11331366
 TELEGRAM_HASH = "6254b1f889fc35676a1a5c71d4259be3"
 # OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
 DATABASE_URL = "postgres://psxwjxkk:Se0pgcglQuMkFMWKA6zJH1sWewR7EXpt@mel.db.elephantsql.com/psxwjxkk"
 AUTHORIZED_CHATS = "-1001840566617"
 SUDO_USERS = ""
@@ -24,7 +24,7 @@ TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Mirror
-MIRROR_LOGS = ""
+MIRROR_LOGS = "-1001855416726"
 BOT_PM = "True"
 FORCE_BOT_PM = ""
 # Leech
@@ -48,7 +48,7 @@ RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""
 # Private Files
 ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = "https://ben10.dailylifeoftheimmortalking20233558.workers.dev/1:/token.pickle"
+TOKEN_PICKLE_URL = "https://benxzone.dailylifeoftheimmortalking20233558.workers.dev/0:/token.pickle"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
